# rgs-django-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pixi.toml  pyproject.toml  pytest.ini  tox.ini
.claude/: settings.json
.claude/hooks/: block-env-secret-print.py
.github/workflows/: test.yml
docs/: permissions.md
rgs_django_utils/: README.md  apps.py  run_import.py  setup_django.py
rgs_django_utils/commands/: __init__.py  datamodel2.schema.json  export_datamodel_to_excel.py  export_datamodel_to_json_schema.py  hasura_permissions.py  sync_db_description.py
rgs_django_utils/database/: custom_fields.py  db_types.py  dj_extended_models.py  dj_settings_helper.py  install_db_default_records.py  install_db_defaults_and_relation_cascading.py  install_db_functions_and_triggers.py  permission_helper.py  upsert_multiple_data.py
rgs_django_utils/database/base_models/: __init__.py  enums.py  modification_mixin.py  validity_period.py
rgs_django_utils/forms/: Form.py  Section.py  __init__.py  api.py
rgs_django_utils/forms/fields/: BooleanField.py  Field.py  FileField.py  FloatField.py  IntegerField.py  SelectField.py  StringField.py  TextField.py
rgs_django_utils/logging/: __init__.py
rgs_django_utils/logging/logging/: README.md  __init__.py  context_filter.py  db_handler.py  log_context.py  loggers.py
rgs_django_utils/management/commands/: generate_hasura_metadata.py  migrate_and_update.py  sync_db_description.py  write_models_to_json_schema.py  write_models_to_xlsx.py
rgs_django_utils/migrations/: 0001_initial.py  0002_remove_enummoduleextended_id_delete_enummodule_and_more.py  0003_alter_projectfile_created_by_alter_task_created_by_and_more.py  0003_enumaccessthrough.py  0004_alter_projectfile_created_by_and_more.py  0006_alter_enumauthmethodextended_id_and_more.py  0007_alter_enumauthmethodextended_id_and_more.py  0008_alter_enumworkflowstep_options_and_more.py  0010_alter_task_step.py  0012_remove_taskprogress_task_alter_taskprogress_id.py  0013_alter_taskprogress_id.py  0014_rename_id_taskprogress_task.py  0015_remove_task_input_task_output.py  0018_remove_task_locked_remove_task_name_and_more.py
rgs_django_utils/models/: __init__.py  database_description.py  task.py
rgs_django_utils/models/enums/: __init__.py  _enum_sections.py  auth_method.py  data_types.py  enum_access_through.py  enum_sections.py  file_purpose.py  import_mode.py  message_code.py  module.py  role.py  source_type.py  task_status.py  validation_message.py  workflow_step.py  workflow_type.py
rgs_django_utils/models/views/: __init__.py  abstract.py  user_view.py
rgs_django_utils/permissions/: claims.py
rgs_django_utils/tasks/: api.py  base_class.py  base_export.py  base_import.py  token_validator.py  validation_baseclass.py  validation_logger.py  workflow_service_queue.py
rgs_django_utils/tests/: manage.py
rgs_django_utils/tests/testapp/: README.md  manage.py  models.py  settings_test.py
rgs_django_utils/utils/: authorization.py  email_template.py  generate_hasura_metadata.py  settings_getter.py  token_validator.py
rgs_utils/: apps.py  run_import.py
rgs_utils/commands/: export_datamodel_to_excel.py  sync_db_description.py
rgs_utils/database/: custom_fields.py  dj_extended_models.py  dj_settings_helper.py  install_db_default_records.py  install_db_defaults_and_relation_cascading.py  install_db_functions_and_triggers.py  upsert_multiple_data.py
rgs_utils/database/base_models/: enums.py  modification_mixin.py  validity_period.py
rgs_utils/forms/: Form.py  Section.py
rgs_utils/forms/fields/: BooleanField.py  FileField.py  FloatField.py  IntegerField.py  SelectField.py  StringField.py  TextField.py  __init__.py
rgs_utils/logging/: levels.py
rgs_utils/management/commands/: generate_hasura_metadata.py  migrate_and_update.py  sync_db_description.py  write_models_to_xlsx.py
rgs_utils/migrations/: 0001_initial.py  0002_rename_workflow_workflow_template.py  0005_rename_ids_workflowtemplate_id.py  0009_alter_enumworkflowtype_options_and_more.py  0011_enumworkflowstepextended_action.py  0016_workflow_active_step.py  0017_task_locked.py  0019_remove_enumauthmethodextended_combine_with_2fa.py
rgs_utils/models/: database_description.py  task.py
rgs_utils/models/enums/: __init__.py  _enum_sections.py  auth_method.py  data_types.py  file_purpose.py  import_mode.py  message_code.py  role.py  source_type.py  task_status.py  validation_message.py  workflow_step.py  workflow_type.py
rgs_utils/tasks/: api.py  base_class.py  base_export.py  base_import.py  validation_baseclass.py  workflow_service_queue.py
rgs_utils/tests/testapp/: README.md  settings_test.py
rgs_utils/tests/testapp/migrations/: 0001_initial.py  0002_childmodel_int_field.py  0003_alter_childmodel_options_alter_childmodel_id_and_more.py
rgs_utils/utils/: authorization.py  email_template.py  generate_hasura_metadata.py
tests/: manage.py  run_tests.py  test_config_recalc.py  test_export_datamodel_to_json_schema.py  test_permission_helper.py  test_settings_helper.py
tests/testapp/: README.md  manage.py  models.py  settings_test.py
tests/testapp/migrations/: 0001_initial.py
