[project]
name = "rgs-django-utils"
version = "0.1.0"
description = "Functions related to Django, shared between projects"
readme = "README.md"
requires-python = "~=3.12"
license-files = ["LICENSE"]
authors = [
    { name = "Bastiaan Roos", email = "bastiaan.roos@roosgeo.nl" }
]
maintainers = [
    { name = "Bastiaan Roos" }
]
keywords = []

[project.urls]
repository = "https://github.com/GetThePointGit/rgs-django-utils"

[tool.setuptools]
packages = { find = { where = ["rgs_django_utils"] } }
include-package-data = true

# FORMATTING
[tool.ruff]
# see https://docs.astral.sh/ruff/rules/ for meaning of rules
line-length = 119

#Exclude external packages in formatter
extend-exclude = [".pixi/*", "var/*", "migrations/*",]
include = ["*.py"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["D", "E", "F", "NPY", "PD", "C4", "I"]
ignore = ["D1", "D202", "D205", "D400", "D404", "E501", "PD002", "PD901"]
fixable = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in init
"__init__.py" = ["F401",  "I001"]

[tool.pylint]
disable = ["W1203"]
